# GeoPositionConverter

./: CMakeLists.txt  README.md
include/: conversion.hpp  coordinates.hpp
src/: test.cpp
src/conversion/: conversion.cpp
src/coordinates/: coordinates.cpp
